--- a/css/main.css
+++ b/css/main.css
@@ -96,16 +96,64 @@ textarea {
    ========================================================================== */
 
 
+#canvas{
+    border: solid 1px #222;
+    background-image: url("../img/transparent.png");
+    background-repeat: repeat;
+    resize: both;
+}
+#canvas-line{
+    width:64px;
+    height:64px;
+}
 
+body{
+	margin: 0px;
+	padding: 0px;
+	position: relative;
+}
+#canvas-wrapper{
+	width: 100%;
+	height: 70%;
+    top:30%;
 
+	/*position: fixed;*/
+}
+#button-container{
+    height:10%;
+    width:100%;
+    
+  /*  position:fixed;*/
+}
+#twitterStamp{
+    height:96px;
+    width: 96px;
+}
 
+.cnt-cell{
+    display: inline-block;
+    text-align: center;
+    vertical-align: top;
+   border:groove 2px #ccc;
+  position:relative;
+  padding: 20px;
+}
+.cnt-cell h3{
+  
+  position:absolute;
+  top:-0.5em;
+  left:0.5em;
+  font-size:1em;
+  font-weight:bold;
+  display:inline;
+  margin:0;
+  padding:0 0.5em;
+  background-color:#fff;
 
-
-
-
-
-
-
+}
+.jscolor{
+    width:4em;
+}
 
 
 
